10 Apr 2019 (0.40)
* Update to fix auto job updates (where path to Manage project was being
  removed)

19 Mar 2019 (0.39)
* Update to make the management report be generated for a cover project

23 Jan 2019 (0.38)
* Fix for spurious newline characters in report title in XML for Jenkins with
  VectorCAST 2019

10 Jan 2019 (0.37)
* Corrected missing " that could affect Linux jobs running
* Added support for generating unit and cover XML reports for Jenkins with
  VectorCAST 2019

26 Sept 2018 (0.36)
* Support overlapping version 17 manage projects
* Updates to support long directory pathing in VectorCAST/Manage reporting

15 May 2018 (0.35)
* Support newer versions of xUnit

10 May 2018 (0.34)
* Support newer versions of Multijob (1.30 onwards)

17 Jan 2018 (0.33)
* Don't create intermediate CSV file for bad test case management report 
* Raise post-groovy alert for bad test case management report

15 Jan 2018 (0.32)
* Change to cope with coverage without a unit, to avoid
  corrupted coverage xml file

13 Dec 2017 (0.31)
* Corrected redundant quote in Linux single job
* Corrected link from xUnit trend graph to results

5 Dec 2017 (0.30)
* Fixed regression with naming of archived execution and management reports
* Added VCAST_VC_SCRIPT environment variable that if set, will copy the scripts
  to %WORKSPACE%/vc_scripts from there instead of from the plugin

27 Nov 2017 (0.29)
* Improved support for Manage projects / environment / compilers with long names

2 Nov 2017 (0.28)
* Fix regression %VAR% rather than $VAR in generated commands

2 Nov 2017 (0.27)
* Fix regression with missing space between --wait_loops and project name in
  call to generate-results.py in single job

1 Nov 2017 (0.26)
* Update to summary being written in groovy script - no longer sets description
  but sets summary text instead, avoiding HTML formatting problems in build history
* Allow retry when licenses unavailable to be used for single jobs as well